# sfdata-annexa-clean

./: main.py  pyproject.toml
examples/annex_a/: category_resolver.yml  type_resolver.yml
examples/annex_a/spec/categories/: Case status.yml  Child's Category of Need.yml  Child's Legal Status.yml  Ethnicity.yml  Gender.yml  LA of Placement.yml  Latest Category of Abuse.yml  Placement Location.yml  Placement Provider.yml  Placement Type.yml  Reason Ceased to be Looked After.yml  Reason for Closure.yml  Referral Source.yml  What is the permanence plan for this child?.yml  YesNo.yml
examples/annex_a/spec/types/: List 1.yml  List 10.yml  List 11.yml  List 2.yml  List 3.yml  List 4.yml  List 5.yml  List 6.yml  List 7.yml  List 8.yml  List 9.yml
extras/: migrate_old_spec.py
sfdata_schema/: data.py  parser.py
sfdata_tablecleaner/: __main__.py  source_scanner.py
sfdata_tablecleaner/sources/: __init__.py
